# c3p

./: .gitignore  CHEBI-LLM-Classifier.ipynb  Eval-LLM.ipynb  Makefile  README.md  pyproject.toml  pytest.ini
c3p/: benchmark_validator.py  chebi_classifier.py  classifier.py  cli.py  combine_cli.py  compare_cli.py  datamodel.py  dumper.py  enrichment.py  eval_cli.py  evaluation.py  extractor.py  generator.py  learn.py  learn_cli.py  maftools.py  outcome_stats.py  plotting.py  stats.py  summarize_cli.py  validate_cli.py
c3p/agentic/: c3p_agent.py
c3p/clients/: chebifier.py
c3p/curated/: __init__.py  triglyceride.py
c3p/programs/: 11_12_saturated_fatty_acyl_CoA_4__.py  11_oxo_steroid.py  11beta_hydroxy_steroid.py  16alpha_hydroxy_steroid.py  16beta_hydroxy_steroid.py  17_hydroxy_steroid.py  17_oxo_steroid.py  17alpha_hydroxy_C21_steroid.py  17alpha_hydroxy_steroid.py  17beta_hydroxy_steroid.py  1_2_4_triazines.py  1_2_diacyl_3__alpha_D_6_sulfoquinovosyl__sn_glycerol.py  1_2_diacyl_3_beta_D_galactosyl_sn_glycerol.py  1_2_diacyl_sn_glycero_3_phosphocholine.py  1_2_diacyl_sn_glycero_3_phosphocholine_1__.py  1_2_diacyl_sn_glycero_3_phosphoethanolamine.py  1_2_diacyl_sn_glycero_3_phosphoethanolamine_zwitterion.py  1_2_diacyl_sn_glycerol_3_phosphate.py  1_2_diacyl_sn_glycerolipid.py  1_3_5_triazines.py  1_3_dihydroimidazole_2_thiones.py  1_4_benzoquinones.py  1_4_naphthoquinones.py  1_O__alk_1_enyl__2_O_acyl_sn_glycero_3_phosphocholine.py  1_O__alk_1_enyl__2_acyl_sn_glycerolipid.py  1_O__alk_1_enyl__sn_glycero_3_phosphocholine.py  1_O_acylglycerophosphoethanolamine.py  1__alk_1_enyl__2_acyl_sn_glycero_3_phosphoethanolamine.py  1_acyl_sn_glycero_3_phosphoethanolamine.py  1_acyl_sn_glycero_3_phosphoserine.py  1_acylglycerophosphoinositol.py  1_alkyl_sn_glycero_3_phosphoethanolamine.py  1_benzofurans.py  1_monoglyceride.py  1_phosphatidyl_1D_myo_inositol.py  1_phosphatidyl_1D_myo_inositol_3_phosphate_anion_derivative.py  1_phosphatidyl_1D_myo_inositol_anion_derivative.py  1_radyl_2_acyl_sn_glycero_3_phospho__1D_myo_2_acyl_inositol__1__.py  1_radyl_2_acyl_sn_glycerolipid.py  20_oxo_steroid.py  (+1320 more)
chebi_llm_classifier/: datamodel.py  evaluation.py  generator.py  stats.py
docs/: benchmark.md  chebacr.md  index.md  install.md  leia.md
docs/analysis/: chebacr-chebi-curators.xslx  chebifier.md  classes_all.html  classes_bottom.html  classes_top.html  code_analysis.md  curation.md  metabolomics.md  npatlas.md  performance.md  programs.md  programs2.md  terpenoids.md  terpenoids_table.html
docs/notebooks/: CuratorEvalSummary.ipynb  EnhanceMAFs.ipynb  EnrichMiBiG.ipynb  Metabolights-Overrepresentation-Analysis.ipynb  NPAtlasAnalysis.ipynb  Summarize-Benchmark.ipynb  terpenoid.ipynb
learned/DeepSeek-R1/: 11_12_saturated_fatty_acyl_CoA_4__.py  11_oxo_steroid.py  11beta_hydroxy_steroid.py  16beta_hydroxy_steroid.py  17alpha_hydroxy_steroid.py  17beta_hydroxy_steroid.py  1_2_4_triazines.py  2_enoyl_CoA.py  (+335 more)
notebooks/: CuratorEval.ipynb  EnhanceMAFs.ipynb  GenerateCuratorEvalTable.ipynb  Metabolights-Analysis.ipynb  MiBiGAnalysis.ipynb  NPAtlasAnalysis.ipynb  Run-Chebifier.ipynb  SimpleSmartsAnalysis.ipynb
tests/: conftest.py  test_benchmark_validator.py  test_chebifier.py  test_classify.py  test_cli.py  test_datamodel.py  test_dumper.py  test_evaluate_program.py  test_extractor.py  test_learn.py
(+4457 files in other folders)
